# datacollect-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
lib/linux64/6.7.0_P1_CP_LinuxDataCollect/: DataCollect.h
lib/macos/sfit_pro_1.0_20250325/MacDataCollect.framework/Versions/A/: MacDataCollect
lib/macos/sfit_tst_1.0_20250325/MacDataCollect.framework/: MacDataCollect
lib/macos/sfit_tst_1.0_20250325/MacDataCollect.framework/Versions/A/: MacDataCollect
lib/macos/sfit_tst_1.0_20250325/MacDataCollect.framework/Versions/A/Headers/: DataCollect.h
lib/macos/sfit_tst_1.0_20250325/MacDataCollect.framework/Versions/A/Resources/: Info.plist
lib/macos/sfit_tst_1.0_20250325/MacDataCollect.framework/Versions/A/_CodeSignature/: CodeResources
lib/win64/v6.6.7_20220304_clientdll64/: DataCollect.h  WinDataCollect.lib
src/: api.rs  error.rs  lib.rs  symbols.rs
